<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#818080"
    android:background="@color/BG">
    <!-- A CardView that contains a TextView -->


    <Button
        android:id="@+id/containedButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_question"
        app:icon="@drawable/ic_baseline_add_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="15dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/toggleinput"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:text="@string/radio_button"
        android:textColor="@color/cardText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_material"
        android:layout_width="381dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="112dp"

        android:clickable="true"
        app:layout_constraintHorizontal_bias="0.533"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/question_text_label"
                android:textColorHint="#DEDFDF"
                android:textColor="@color/cardText"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <RadioGroup
                android:layout_width="380dp"
                android:layout_height="158dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/containedButton2"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_answer"
                    card_view:icon="@drawable/ic_baseline_add_24"
                    tools:ignore="MissingConstraints" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="Answer 2"
                    android:textColor="@color/cardText" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="Answer 3"
                    android:textColor="@color/cardText" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="Answer 1"
                    android:textColor="@color/cardText" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>